--- a/coverage_comment1/default.md.j2
+++ b/coverage_comment1/default.md.j2
@@ -41,7 +41,7 @@ The branch rate is `{{ (coverage.info.covered_branches / coverage.info.num_branc
 {% block coverage_single_file_title scoped %}### {{ filename }}{% endblock coverage_single_file_title %}
 {% block diff_coverage_single_file_wording scoped -%}
 `{{ diff_file_coverage.percent_covered | pct }}` of new lines are covered (`{{ coverage.files[filename].info.percent_covered | pct }}` of the complete file).
-{% endblock diff_coverage_single_file_wording %}
+{%- endblock diff_coverage_single_file_wording %}
 {%- if diff_file_coverage.violation_lines %}
 {% block single_file_missing_lines_wording scoped -%}
 {% set separator = joiner(", ") %}
